# llm-inference-benchmarking

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  policy.example.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: eval_prompts.json
results/: cache_benchmark_snapshot.json  gateway_benchmark_snapshot.json  load_test_balanced.json  load_test_cheap.json  load_test_premium.json  modal_quant_a10g.json
src/llm_inference_benchmarking/: __init__.py  ab_router.py  benchmark.py  charts.py  client.py  cost.py  eval.py  gateway.py  ledger.py  load_test.py  metrics.py  modal_benchmark.py  pareto.py  policy.py  quality_router.py  rate_limiter.py  service_app.py  sla.py  types.py  viz.py
tests/: test_ab_router.py  test_boundary.py  test_budget_policy.py  test_eval.py  test_features.py  test_gateway.py  test_gateway_security.py  test_package_boundary.py  test_policy.py  test_policy_controls.py
