[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-inference-benchmarking"
version = "0.1.0"
description = "Cost-aware LLM routing gateway, benchmarks, and optional standalone inference API"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-ollama",
    "prometheus-client",
    "fastapi",
    "uvicorn",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[project.scripts]
llm-gateway-bench = "llm_inference_benchmarking.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
