[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-inference-benchmarking"
version = "0.1.0"
description = "Cost-aware LLM routing gateway and benchmark CLI (single-module distribution)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-ollama",
    "prometheus-client",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "modal>=1.4.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
llm-gateway-bench = "llm_inference_benchmarking.benchmark:main"
llm-load-test = "llm_inference_benchmarking.load_test:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]
